Name:                nano-cryptr
Version:             0.1
Synopsis:            A threadsafe binding to glibc's crypt_r function
License:             GPL-2
License-file:        LICENSE
Author:              Carl Howells
Maintainer:          chowells79@gmail.com
Category:            System
Build-type:          Simple
Cabal-version:       >=1.2
Description:
  This package wraps @glibc@'s @crypt_r@ function in a thread-safe manner.

Library
  Exposed-modules:     System.Gnu.CryptR
  Build-depends:       base == 4.*, bytestring == 0.9.*
  Build-tools:         hsc2hs
  cc-options:          -D_GNU_SOURCE
  extra-libraries:     crypt
